# tweetopic

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  citation.cff  genindex.html  index.html  installation.html  mess.py  objects.inv  optional_requirements.txt  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tweetopic.btm.html  tweetopic.dmm.html  tweetopic.mgp.html  tweetopic.pipeline.html  tweetopic.typing.html  using_tweetopic.btm.html  using_tweetopic.dmm.html  using_tweetopic.html  using_tweetopic.model_persistence.html  using_tweetopic.pipeline.html  using_tweetopic.visualization.html
.github/workflows/: documentation.yaml  publish_to_pypi.yaml  test.yml
docs/: MovieGroupProcess.html  conf.py  index.html  index.rst  installation.rst  mgp.md  tweetopic.btm.rst  tweetopic.dmm.rst  tweetopic.mgp.rst  tweetopic.pipeline.rst  tweetopic.typing.rst  using_tweetopic.btm.rst  using_tweetopic.dmm.rst  using_tweetopic.model_persistence.rst  using_tweetopic.pipeline.rst  using_tweetopic.rst  using_tweetopic.visualization.rst
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  tweetopic.btm.doctree  tweetopic.dmm.doctree  tweetopic.mgp.doctree  tweetopic.pipeline.doctree  tweetopic.typing.doctree  using_tweetopic.btm.doctree  using_tweetopic.dmm.doctree  using_tweetopic.doctree  using_tweetopic.model_persistence.doctree  using_tweetopic.pipeline.doctree  using_tweetopic.visualization.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  tweetopic.btm.html  tweetopic.dmm.html  tweetopic.mgp.html  tweetopic.pipeline.html  tweetopic.typing.html  using_tweetopic.btm.html  using_tweetopic.dmm.html  using_tweetopic.html  using_tweetopic.model_persistence.html  using_tweetopic.pipeline.html  using_tweetopic.visualization.html
tests/: sample.py  test_dmm.py  test_integration.py
tweetopic/: __init__.py  _btm.py  _dmm.py  _doc.py  _mgp.py  _old.py  _prob.py  _utils.pyx  _visualize.py  btm.py  dmm.py  exceptions.py  func.py  mgp.py  pipeline.py  typing.py  utils.py
tweetopic/bayesian/: dmm.py  sampling.py
