[tool.black]
line-length=79

[tool.poetry]
name = "tweetopic"
version = "0.4.0"
description = "Topic modelling over short texts"
authors = ["Márton Kardos <power.up1163@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0"
numpy = ">=1.22,<1.27.0"
numba = ">=0.58.1"
scikit-learn = ">=1.1.1,<1.4.0"
joblib = ">=1.1.0"
deprecated = ">=1.2.0"
tqdm = ">=4.64.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
