[metadata]
name = tweetopic
version = 0.0.5
description = Efficient Numba based implementation of Gibbs Sampling Dirichlet Mixed Model.
author = Márton Kardos
author_email =power.up1163@gmail.com
url = https://centre-for-humanities-computing.github.io/tweetopic/index.html
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    lda
    topic-modeling
    gibbs-sampling
    numba
    dirichlet-mixture-model
    dirichlet-multinomial
    dirichlet-multinomial-mixture-model

[options]
packages = find:
include_package_data = true
python_requires = >=3.7
zip_safe = false
install_requires =
    scikit-learn>=1.1.1,<1.2.0
    numba>=0.56.0,<0.57.0
    numpy>=1.22.4,<1.23.0
    scipy>=1.9.1,<1.10.0
    joblib>=1.1.0

setup_requires =
    setuptools

[options.extras_require]
viz = 
    pyLDAvis>=3.3.1,<3.4.0
dev = # development dependencies
    # style
    black>=22.3.0,<22.4.0
    pre-commit>=2.19.0,<2.20.0
    flake8>=3.9.2,<3.10.0
    docformatter>=1.4,<1.5
    # docs
    Sphinx>=4.5.0,<5.1.0
    furo==2022.4.7
    sphinxext-opengraph>=0.6.3,<0.7.0
    sphinx-copybutton>=0.5.0,<0.6.0
    myst-parser>=0.18.0,<0.19.0
    sphinx_design>=0.2.0,<0.3.0
    # testing
    pytest>=7.1.2,<7.2.0
    pytest-cov>=3.0.0,<3.0.1
    # packaging
    pyLDAvis>=3.3.1,<3.4.0


[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E731, E741, W503, F811
max-line-length = 88
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = true

[coverage:run]

[coverage:report]
omit =
    **/tests/*
    **/about.py
exclude_lines =
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True
